--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
     <header id="top">
       <h1>Prework Study Guide</h1>
+      <!-- <img src="C:\Users\User\bootcamp\prework-study-guide\assets\bowtie-cat.png" alt="Profile image of cat wearing a bow tie." /> -->
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
-    </header>
+      </header>
     <main>
       <section class="card" id="html-section">
         <h2>HTML</h2>
@@ -25,6 +27,8 @@
         <h2>CSS</h2>
         <ul>
         <li>Enter your CSS notes here</li>
+        <li>A margin indicates how much space we want around the outside of an element.</li>
+        <li>A padding indicates how much space we want around the content inside an element.</li>
         </ul>
       </section>
    
@@ -32,8 +36,8 @@
         <h2>Git</h2>
         <ul>
         <li>Enter your Git notes here</li>
-        <li>git status: checks what branch we are currently on</li>
-        <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+        <li>git status: checks what branch we are currently on.</li>
+        <li>git checkout -b branch-name: creates a new branch and switches to it.</li>
         </ul>
       </section>
    
